--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2024 My Landing Page. All Rights Reserved.</p>
+    <p>&copy; <b>2024 My Landing Page.</b> All Rights Reserved.</p>
     <div>
       <a href="#">Facebook</a>
       <a href="#">Instagram</a>
